<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mars_desc">Save photos &amp; videos to a private storage space in Google Photos on your device</string>
    <string name="about_mars_desc_2">You can find Locked Folder in Google Photos in the Library tab</string>
    <string name="about_mars_title">Hide sensitive photos &amp; videos</string>
    <string name="accessibility_amber_start">Start cinematic blur</string>
    <string name="accessibility_amber_stop">Stop cinematic blur</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="accessibility_back_to_video_description">Back to normal video mode</string>
    <string name="accessibility_banner_message_dismiss">Dismiss</string>
    <string name="accessibility_cancel_button">Cancel photo</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_serengeti_start">Start capture</string>
    <string name="accessibility_capture_serengeti_start_night">Start Night Sight capture</string>
    <string name="accessibility_capture_serengeti_stop">Stop capture</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_recording_time_description">Recording time %1$s</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_record_speed_desc">Slow Motion %1$d/%2$d times speed</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_mars_button">Locked Folder</string>
    <string name="accessibility_paused_elapsed_recording_time_description">PAUSED, recording time %1$s</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speech_enhance_indicator">Speech Enhancement on</string>
    <string name="accessibility_take_astro_button">Take Astrophotography photo</string>
    <string name="accessibility_take_catshark_portrait_button">Take Night Sight in Portrait</string>
    <string name="accessibility_take_lasagna_button">Take Motion mode photo</string>
    <string name="accessibility_take_nightsight_button">Take Night Sight photo</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_timelapse_auto_record_speed_desc">Time Lapse auto speed</string>
    <string name="accessibility_video_night_sight_start">Start night sight video</string>
    <string name="accessibility_video_night_sight_stop">Stop night sight video</string>
    <string name="accessibility_video_output_length_description">Output video length %1$s</string>
    <string name="action_pan_help_button_accessibility">Learn about Action Pan mode</string>
    <string name="add_me_help_button_accessibility">Learn about Add Me mode</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">Lens smudges aren\'t always easy to see, and they can come from fingerprints, oil or dirt.\n\nClean your lens for better photo quality.</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_infinity_acc_desc">Lock focus to infinity</string>
    <string name="af_off_infinity_desc">Infinity</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_option_desc">Auto</string>
    <string name="af_option_desc">Focus</string>
    <string name="all_in_suggestion">Want to be in the group photo?</string>
    <string name="catcher_always_on_bottomsheet_text">Start a photo timer by showing your palm to the front or rear cameras</string>
    <string name="go_to_photos_btn_text">Go to Google Photos</string>
    <string name="jupiter_title">Rear Camera Selfie</string>
    <string name="manual_controls">Manual Controls</string>
    <string name="mars_learn_more">Learn more</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_audio_zoom_summary">Zooming in on subject boosts sound and reduces background noise</string>
    <string name="pref_audio_zoom_title">Audio zoom</string>
    <string name="pref_camera_anglerfish_summary">Remove reflection from eyeglasses lens</string>
    <string name="pref_camera_anglerfish_title">Glare removal</string>
    <string name="pref_camera_catcher_title">Palm timer</string>
    <string name="pref_camera_coach_summary">On-screen tips and tools, like levelers and focus tips</string>
    <string name="pref_camera_coach_title">Framing hints</string>
    <string name="pref_camera_frequent_faces_title">Frequent Faces</string>
    <string name="pref_camera_gestures_title">Button shortcuts</string>
    <string name="pref_camera_lens_subtitle_legacy">Point your camera to scan QR codes and documents</string>
    <string name="pref_camera_lens_title">Camera scan suggestions</string>
    <string name="pref_camera_mirror_image_title">Save selfie as previewed</string>
    <string name="pref_camera_picturesize_default">Full resolution</string>
    <string name="pref_camera_save_location_summary">Other apps may be able to view photo &amp; video location info</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_selfie_mirror_image_summary">Save selfie photos as they appear in the viewer</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_storage">Device storage</string>
    <string name="pref_codec_format">Video format</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_hevc_control_summary">Use H.265/HEVC format instead of H.264/AVC for a smaller file size. HEVC may not be supported on some platforms.</string>
    <string name="pref_hotshot">Guided Frame</string>
    <string name="pref_hotshot_summary">Take photos with the help of audio, vibrations and visual cues</string>
    <string name="pref_hotshot_summary_non_talkBack">Use audio cues, vibrations, and visuals to help frame faces in photos</string>
    <string name="pref_jasper">Jasper</string>
    <string name="pref_jasper_summary">lorem ipsum.</string>
    <string name="pref_quick_access_controls">Quick access controls</string>
    <string name="pref_quick_access_controls_summary">Adjust white balance, brightness, and shadows by tapping the viewfinder</string>
    <string name="pref_video_hevc">Store videos efficiently</string>
    <string name="pref_video_optimize_fps">Optimize FPS</string>
    <string name="pref_video_optimize_fps_summary">Automatically adjust from %1$d FPS to %2$d FPS to optimize the recording experience when needed</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="pref_video_stabilization_summary">Reduce camera shake to make videos smoother. Will result in a zoomed-in view.</string>
    <string name="saturn_title">Dual Screen Preview</string>
    <string name="selfie_angle_bottom_sheet_description">When you take a selfie, try holding the camera slightly above your eyes.</string>
    <string name="selfie_angle_bottom_sheet_setting_button">Turn off hints in Settings</string>
    <string name="selfie_angle_bottom_sheet_turn_off_button">Dismiss</string>
    <string name="setting_camera_photo">Camera photo resolution</string>
    <string name="setting_composition">Composition</string>
    <string name="setting_general">General</string>
    <string name="setting_google_feedback">Send feedback</string>
    <string name="setting_google_help">Help</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="setting_grid_mode">Grid type</string>
    <string name="setting_unfold_preference">Unfold shortcut</string>
    <string name="setup_mars_description">Save your photos and videos to a private storage space in Google Photos on your device. Open Locked Folder using your current device screen lock option.</string>
    <string name="setup_mars_title">Set up Locked Folder</string>
    <string name="unfold_preference_description">Automatically launch a dual screen feature when you unfold while using the camera</string>
    <string name="unfold_preference_standard_camera">Standard Camera</string>
    <string name="uranus_title">Made You Look</string>
</resources>