<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orderingFromXml="true"
    android:key="prefscreen_top"
    app:title="@string/pref_camera_settings_category">
    <androidx.preference.PreferenceCategory
        android:title="@string/setting_general"
        android:key="pref_category_general">
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_location_on_vd_theme_24"
            android:title="@string/pref_camera_save_location_title"
            android:key="pref_camera_recordlocation_key"
            android:summary="@string/pref_camera_save_location_summary"
            android:order="0"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_volume_up_vd_theme_24"
            android:title="@string/pref_camera_sounds_title"
            android:key="pref_camera_sounds_key"
            android:order="1"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_google_lens_2_vd_theme_24"
            android:title="@string/pref_camera_lens_title"
            android:key="pref_camera_enable_iris"
            android:summary="@string/pref_camera_lens_subtitle_legacy"
            android:order="2"
            android:defaultValue="true"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_gesture_capture_vd_theme_24"
            android:title="@string/pref_camera_catcher_title"
            android:key="pref_camera_catcher_sentry_mode_key"
            android:summary="@string/catcher_always_on_bottomsheet_text"
            android:order="3"
            android:defaultValue="true"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/ic_hotshot_24dp"
            android:title="@string/pref_hotshot"
            android:key="pref_hotshot_key"
            android:summary="@string/pref_hotshot_summary"
            android:order="4"
            android:defaultValue="true"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/ic_hotshot_24dp"
            android:title="@string/pref_hotshot"
            android:key="pref_hotshot_non_talkback_key"
            android:summary="@string/pref_hotshot_summary_non_talkBack"
            android:order="4"
            android:defaultValue="false"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_hotshot_24dp"
            android:title="@string/pref_hotshot"
            android:key="pref_category_hotshot_key"
            android:order="4"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.HotshotPreferenceFragment"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/ic_hotshot_24dp"
            android:title="@string/pref_hotshot"
            android:key="pref_category_hotshot_non_talkback_key"
            android:order="4"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.HotshotPreferenceFragment"/>
        <androidx.preference.ListPreference
            android:icon="@drawable/ic_jupiter_24px"
            android:entries="@array/pref_unfold_preference_entries"
            android:title="@string/setting_unfold_preference"
            android:key="pref_unfold_preference"
            android:summary="%s"
            android:order="5"
            android:defaultValue="1"
            android:dialogLayout="@layout/unfold_preference_setting_compat"
            android:entryValues="@array/pref_unfold_preference_entryvalues"/>
        <com.google.android.apps.camera.ui.preference.BlockableListPreferenceCompat
            android:icon="@drawable/gs_gesture_capture_vd_theme_24"
            android:entries="@array/pref_catcher_type_entries"
            android:title="@string/pref_camera_catcher_title"
            android:key="pref_camera_catcher_key"
            android:summary="%s"
            android:order="7"
            android:defaultValue="0"
            android:entryValues="@array/pref_catcher_entryvalues"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/gs_touch_app_vd_theme_24"
            android:title="@string/pref_camera_gestures_title"
            android:key="pref_category_gestures"
            android:summary="@string/pref_camera_volume_key_action_title"
            android:order="8"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.GesturesPreferenceFragment"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/gs_face_vd_theme_24"
            android:title="@string/pref_camera_frequent_faces_title"
            android:key="pref_category_frequent_faces"
            android:order="9"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.FrequentFacesPreferenceFragment"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/gs_sd_card_vd_theme_24"
            android:title="@string/pref_category_storage"
            android:key="pref_category_storage"
            android:order="10"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.StoragePreferenceFragment"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/gs_more_horiz_vd_theme_24"
            android:key="pref_category_advanced"
            android:order="255"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.AdvancedPreferenceFragment"
            app:title="@string/pref_category_advanced"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/gs_download_vd_theme_24"
            android:key="pref_category_boba_jelly"
            android:order="11"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.DownloadPreferenceFragment"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/setting_composition"
        android:key="pref_category_composition">
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_aspect_ratio_vd_theme_24"
            android:title="@string/pref_camera_coach_title"
            android:key="pref_camera_coach_key"
            android:summary="@string/pref_camera_coach_summary"
            android:order="3"
            android:defaultValue="true"/>
        <androidx.preference.ListPreference
            android:icon="@drawable/gs_grid_on_vd_theme_24"
            android:entries="@array/pref_grid_mode_entries"
            android:title="@string/setting_grid_mode"
            android:key="pref_camera_grid_lines_mode"
            android:summary="%s"
            android:order="8"
            android:defaultValue="0"
            android:entryValues="@array/pref_grid_mode_entryvalues"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/manual_controls"
        android:key="pref_category_manual_controls">
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_instant_mix_vd_theme_24"
            android:title="@string/pref_quick_access_controls"
            android:key="pref_quick_access_controls_key"
            android:summary="@string/pref_quick_access_controls_summary"
            android:defaultValue="true"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/photo"
        android:key="pref_category_resolution_camera">
        <com.google.android.apps.camera.ui.preference.BlockableListPreferenceCompat
            android:icon="@drawable/gs_photo_camera_vd_theme_24"
            android:entries="@array/pref_camera_picturesize_entries"
            android:title="@string/setting_camera_photo"
            android:key="pref_camera_resolution"
            android:summary="%s"
            android:order="1"
            android:defaultValue="@string/pref_camera_picturesize_default"
            android:entryValues="@array/pref_camera_picturesize_entryvalues"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_photo_camera_front_vd_theme_24"
            android:title="@string/pref_camera_mirror_image_title"
            android:key="pref_camera_selfie_mirror_key"
            android:summary="@string/pref_camera_selfie_mirror_image_summary"
            android:order="2"
            android:defaultValue="false"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/glass_all"
            android:title="@string/pref_camera_anglerfish_title"
            android:key="pref_anglerfish_enabled_key"
            android:summary="@string/pref_camera_anglerfish_summary"
            android:order="3"
            android:defaultValue="false"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/mode_video"
        android:key="pref_category_resolution_video">
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_video_stable_vd_theme_24"
            android:title="@string/pref_video_stabilization"
            android:key="pref_video_stabilization_key"
            android:summary="@string/pref_video_stabilization_summary"
            android:order="1"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_videocam_auto_vd_theme_24"
            android:title="@string/pref_jasper"
            android:key="pref_jasper_key"
            android:summary="@string/pref_jasper_summary"
            android:order="2"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/gs_surround_sound_vd_theme_24"
            android:title="@string/pref_audio_zoom_title"
            android:key="pref_audio_zoom_key"
            android:summary="@string/pref_audio_zoom_summary"
            android:order="3"
            android:defaultValue="true"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/ic_hevc_gm2_24px"
            android:title="@string/pref_video_hevc"
            android:key="pref_video_hevc_setting_key"
            android:summary="@string/pref_hevc_control_summary"
            android:order="4"/>
        <androidx.preference.ListPreference
            android:icon="@drawable/ic_hevc_gm2_24px"
            android:entries="@array/pref_codec_format_entries"
            android:title="@string/pref_codec_format"
            android:key="pref_codec_format"
            android:summary="%s"
            android:order="4"
            android:entryValues="@array/pref_codec_format_entryvalues"/>
        <com.google.android.apps.camera.ui.preference.ManagedSwitchPreferenceCompat
            android:icon="@drawable/autofps_select_24px"
            android:title="@string/pref_video_optimize_fps"
            android:key="pref_video_optimized_fps"
            android:summary="@string/pref_video_optimize_fps_summary"
            android:order="5"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/setting_google_help_and_feedback"
        android:key="pref_category_help_and_feedback">
        <androidx.preference.Preference
            android:icon="@drawable/gs_feedback_vd_theme_24"
            android:title="@string/setting_google_feedback"
            android:key="pref_launch_feedback"/>
        <androidx.preference.Preference
            android:icon="@drawable/gs_help_vd_theme_24"
            android:title="@string/setting_google_help"
            android:key="pref_launch_help"/>
        <androidx.preference.PreferenceScreen
            android:icon="@drawable/gs_developer_mode_vd_theme_24"
            android:key="pref_category_developer"
            app:fragment="com.google.android.apps.camera.legacy.app.settings.DeveloperPreferenceFragment"
            app:title="@string/pref_developer_settings"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
