<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unfold_preference_description"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="@dimen/unfold_preference_setting_margin_vertical"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp">
        <RadioGroup
            android:id="@+id/preference_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:id="@+id/preference_button_standard_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/unfold_preference_setting_option_min_height"
                android:text="@string/unfold_preference_standard_camera"
                android:paddingStart="@dimen/unfold_preference_setting_option_padding_start"/>
            <RadioButton
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:id="@+id/preference_button_rear_camera_selfie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/unfold_preference_setting_option_min_height"
                android:text="@string/jupiter_title"
                android:paddingStart="@dimen/unfold_preference_setting_option_padding_start"/>
            <RadioButton
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:id="@+id/preference_button_dual_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/unfold_preference_setting_option_min_height"
                android:text="@string/saturn_title"
                android:paddingStart="@dimen/unfold_preference_setting_option_padding_start"/>
            <RadioButton
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:id="@+id/preference_button_made_you_look"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/unfold_preference_setting_option_min_height"
                android:text="@string/uranus_title"
                android:paddingStart="@dimen/unfold_preference_setting_option_padding_start"/>
        </RadioGroup>
    </ScrollView>
</LinearLayout>
