<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/locked_folder_dark"
            android:layout_marginHorizontal="24dp"/>
        <TextView
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="?attr/colorOnBackground"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/setup_mars_title"
            android:layout_marginHorizontal="24dp"/>
        <TextView
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/setup_mars_description"
            android:layout_marginHorizontal="24dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/photos_button"
            android:text="@string/go_to_photos_btn_text"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            style="@style/MaterialButtonFilledStyle.AllRoundedCorner12dp"/>
    </LinearLayout>
</merge>
